# task_manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
docker/: Dockerfile  docker-compose.yml
scripts/: setup.sh
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py  groups.py  projects.py  tasks.py  users.py
src/cache/: client.py
src/core/: config.py  security.py
src/db/: base.py  session.py
src/messaging/: consumers.py  producers.py
src/models/: __init__.py  group.py  project.py  relationships.py  task.py  user.py
src/repo/: group.py  project.py  task.py  user.py
src/schemas/: group.py  project.py  task.py  token.py  user.py
src/services/: group.py  project.py  task.py  user.py
src/utils/: notifications.py  service_notification.py
src/validator/: security.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py  setup_test_db.py  test_db_connection.py  utils.py
tests/api/: test_auth.py  test_groups.py  test_parametrized_api.py  test_projects.py  test_tasks.py  test_tasks_api.py
tests/integration/: test_kafka_integration.py
tests/mocks/: services.py
tests/services/: test_cache_service.py  test_task_service.py
tests/utils/: parameterized.py  test_utils.py
